--- a/localised_spikes_clustered-biocam.ipynb
+++ b/localised_spikes_clustered-biocam.ipynb
@@ -72,18 +72,35 @@
     "\n",
     "# # OR\n",
     "\n",
-    "# H.LoadDetected()"
+    "#H.LoadDetected()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# H.PlotTracesChannels(data_path, 1022)"
+    "#plt.figure(figsize=(20, 10))\n",
+    "H.PlotTracesChannels(data_path, 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "pos = H.probe.positions\n",
+    "neighs = H.probe.neighbors\n",
+    "plt.scatter(np.array(pos)[neighs[2914], 0],\n",
+    "            np.array(pos)[neighs[2914], 1],\n",
+    "            s=1600, alpha=0.2)\n"
    ]
   },
   {
