--- a/localised_spikes_clustered-biocam.ipynb
+++ b/localised_spikes_clustered-biocam.ipynb
@@ -45,7 +45,7 @@
     "cutout_start = 10\n",
     "cutout_end = 30\n",
     "threshold = 20\n",
-    "file_name = 'ProcessedSpikes_biocam.bin'"
+    "file_name = 'results/ProcessedSpikes_biocam.bin'"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Probe.show(figwidth=20)"
+    "Probe.show(figwidth=10)"
    ]
   },
   {
@@ -134,11 +134,11 @@
    "outputs": [],
    "source": [
     "# Load from file\n",
-    "C = Clustering(['ProcessedSpikes_biocam.bin', 'ProcessedSpikes_biocam.bin'], cutout_length=41)\n",
+    "#C = Clustering(['results/ProcessedSpikes_biocam.bin', 'results/ProcessedSpikes_biocam.bin'], cutout_length=41)\n",
     "\n",
     "# Or if the spikes are already in memory\n",
     "# simply load from the Detection class\n",
-    "#C = Clustering(H)"
+    "C = Clustering(H)"
    ]
   },
   {
@@ -226,16 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "C.SaveHDF5([\"file.hdf5\", \"f2.hdf5\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "C.spikes.Shape[0]"
+    "C.SaveHDF5([\"results/f1.hdf5\"])"
    ]
   },
   {
