--- a/localised_spikes_clustered-biocam.ipynb
+++ b/localised_spikes_clustered-biocam.ipynb
@@ -92,6 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(15, 10))\n",
     "H.PlotTracesChannels(52)"
    ]
   },
@@ -133,12 +134,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "C1 = Clustering('results/ProcessedSpikes_biocam.bin', cutout_length=41)\n",
+    "C1.SaveHDF5(\"results/c1.hdf5\")\n",
+    "D1 = Clustering(\"results/c1.hdf5\")\n",
+    "D1.SaveHDF5(\"results/d1.hdf5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! md5sum results/c1.hdf5 results/d1.hdf5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load from file\n",
-    "#C = Clustering(['results/ProcessedSpikes_biocam.bin', 'results/ProcessedSpikes_biocam.bin'], cutout_length=41)\n",
+    "C = Clustering(['results/ProcessedSpikes_biocam.bin', 'results/ProcessedSpikes_biocam.bin'], cutout_length=41)\n",
     "\n",
     "# Or if the spikes are already in memory\n",
     "# simply load from the Detection class\n",
-    "C = Clustering(H)"
+    "#C = Clustering(H)"
    ]
   },
   {
@@ -208,25 +230,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO:\n",
-    "- PlotAll for clustered DONE\n",
-    "- Save in different hdf5 files\n",
-    "- Clean savehdf5 (sampling problem)\n",
-    "- Save the entire class\n",
-    "- DBSCAN creates empty clusters\n",
-    "- Detection gives spikes far from chip"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "C.SaveHDF5([\"results/f1.hdf5\"])"
+    "C.SaveHDF5([\"results/f1.hdf5\", \"results/f2.hdf5\"])"
    ]
   },
   {
