--- a/localised_spikes_clustered-biocam.ipynb
+++ b/localised_spikes_clustered-biocam.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use of the `Detection` class"
+    "# Use of the `HSDetection` class"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hs2 import Detection\n",
+    "from hs2 import HSDetection\n",
     "from probe import BioCam"
    ]
   },
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "Probe = BioCam(data_path)\n",
-    "H = Detection(Probe, to_localize, cutout_start, cutout_end, threshold,\n",
+    "H = HSDetection(Probe, to_localize, cutout_start, cutout_end, threshold,\n",
     "                maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=file_name)"
    ]
   },
@@ -92,7 +92,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(15, 10))\n",
     "H.PlotTracesChannels(52)"
    ]
   },
@@ -115,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use of the `Clustering` class"
+    "# Use of the `HSClustering` class"
    ]
   },
   {
@@ -124,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hs2 import Clustering\n",
+    "from hs2 import HSClustering\n",
     "from sklearn.cluster import DBSCAN"
    ]
   },
@@ -134,33 +133,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "C1 = Clustering('results/ProcessedSpikes_biocam.bin', cutout_length=41)\n",
-    "C1.SaveHDF5(\"results/c1.hdf5\")\n",
-    "D1 = Clustering(\"results/c1.hdf5\")\n",
-    "D1.SaveHDF5(\"results/d1.hdf5\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! md5sum results/c1.hdf5 results/d1.hdf5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Load from file\n",
-    "C = Clustering(['results/ProcessedSpikes_biocam.bin', 'results/ProcessedSpikes_biocam.bin'], cutout_length=41)\n",
+    "#C = Clustering(['results/ProcessedSpikes_biocam.bin', 'results/ProcessedSpikes_biocam.bin'], cutout_length=41)\n",
     "\n",
     "# Or if the spikes are already in memory\n",
     "# simply load from the Detection class\n",
-    "#C = Clustering(H)"
+    "C = HSClustering(H)"
    ]
   },
   {
@@ -235,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "C.SaveHDF5([\"results/f1.hdf5\", \"results/f2.hdf5\"])"
+    "C.SaveHDF5(\"results/f1.hdf5\")"
    ]
   },
   {
