--- a/notebooks/localised_spikes_clustered-biocam.ipynb
+++ b/notebooks/localised_spikes_clustered-biocam.ipynb
@@ -1,18 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,7 +16,9 @@
     "import sys\n",
     "sys.path.append('..')\n",
     "from hs2 import HSDetection\n",
-    "from probe import BioCam"
+    "from probe import BioCam\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -47,7 +37,7 @@
     "cutout_start = 10\n",
     "cutout_end = 30\n",
     "threshold = 20\n",
-    "file_name = 'ProcessedSpikes_biocam.bin'"
+    "file_name = '../data/ProcessedSpikes_biocam.bin'"
    ]
   },
   {
@@ -94,6 +84,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure(figsize=(20, 10))\n",
     "H.PlotTracesChannels(52)"
    ]
   },
@@ -105,8 +98,6 @@
    },
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "plt.figure(figsize=(10, 10))\n",
     "H.PlotAll(invert=True, s=1, alpha=0.05)\n",
     "plt.axis('equal');"
@@ -242,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
