--- a/notebooks/localised_spikes_clustered-biocam.ipynb
+++ b/notebooks/localised_spikes_clustered-biocam.ipynb
@@ -166,7 +166,7 @@
    },
    "outputs": [],
    "source": [
-    "from hs2 import HSClustering"
+    "from herdingspikes import HSClustering"
    ]
   },
   {
