--- a/notebooks/localised_spikes_clustered-biocam.ipynb
+++ b/notebooks/localised_spikes_clustered-biocam.ipynb
@@ -80,6 +80,7 @@
     "cutout_start = 10\n",
     "cutout_end = 30\n",
     "threshold = 16\n",
+    "file_directory = 'results/'\n",
     "file_name = 'ProcessedSpikes_biocam.bin'"
    ]
   },
@@ -106,7 +107,8 @@
    "source": [
     "Probe = BioCam(data_path)\n",
     "H = HSDetection(Probe, to_localize, cutout_start, cutout_end, threshold,\n",
-    "                maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=file_name)"
+    "                maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=file_name,\n",
+    "                file_directory_name=file_directory)"
    ]
   },
   {
@@ -637,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
