Adding option to filter duplicates with decay or with neighborhood

--- a/notebooks/localised_spikes_clustered-biocam.ipynb
+++ b/notebooks/localised_spikes_clustered-biocam.ipynb
@@ -97,7 +97,7 @@
     "Probe = BioCam(data_path)\n",
     "H = HSDetection(Probe, to_localize, cutout_start, cutout_end, threshold,\n",
     "                maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=file_name,\n",
-    "                file_directory_name=file_directory)"
+    "                file_directory_name=file_directory, decay_filtering=True)"
    ]
   },
   {
@@ -547,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
