--- a/notebooks/localised_spikes_clustered-biocam.ipynb
+++ b/notebooks/localised_spikes_clustered-biocam.ipynb
@@ -14,7 +14,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import urllib\n",
+    "import urllib.request\n",
+    "\n",
     "file_url = 'https://datasync.ed.ac.uk/public.php/webdav'\n",
     "\n",
     "print('Downloading data file - around 8GB, so this may take a while, patience...')\n",
@@ -43,8 +44,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
     "import sys\n",
     "sys.path.append('../')\n",
     "from herdingspikes.hs2 import HSDetection\n",
@@ -534,9 +533,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "For HS2",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -548,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
